# internal/router/user.go
@@ -1,6 +1,9 @@
 package router
 
-import "github.com/HoronLee/EchoHub/internal/handler"
+import (
+	"github.com/HoronLee/EchoHub/internal/handler"
+	"github.com/HoronLee/EchoHub/internal/middleware"
+)
 
 // setupV1UserRoutes 设置 v1 版本的用户路由
 func setupV1UserRoutes(routerGroup *VersionedRouterGroup, h *handler.Handlers) {
@@ -11,5 +14,5 @@ func setupV1UserRoutes(routerGroup *VersionedRouterGroup, h *handler.Handlers) {
 
 	// Private routes - 私有路由，需要 JWT 认证
 	// 路径: DELETE /api/v1/user
-	routerGroup.PrivateRouter.DELETE("/user", h.UserHandler.DeleteUser())
+	routerGroup.PrivateRouter.DELETE("/user", h.UserHandler.DeleteUser(), middleware.JwtAuth())
 }
